--- a/src/assets/i18n/hr.json
+++ b/src/assets/i18n/hr.json
@@ -115,7 +115,7 @@
 		"logo_subtitle": "",
 		"logo_title": "Procjena učinka na privatnost",
 		"pia_example_link": "Primjer PUP-a",
-		"structures": "PIA template",
+		"structures": "DPIA template",
 		"tools": {
 			"about": "O programu",
 			"accessibility": "Pristupačnost za slabovidne osobe (boje visokog kontrasta, daltonizam)",
